[gd_scene load_steps=3 format=3 uid="uid://v8u8oswwmlf3"]

[ext_resource type="Script" path="res://day_panel/todo_item/todo_item.gd" id="1_k5aju"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d7cp3"]

[node name="TodoItem" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -608.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_k5aju")

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 2
focus_mode = 0

[node name="Control" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_d7cp3")

[node name="ToDo" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 2

[node name="Edit" type="LineEdit" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="focus_exited" from="Control/Edit" to="." method="_on_edit_focus_exited"]
[connection signal="text_changed" from="Control/Edit" to="." method="_on_edit_text_changed"]
[connection signal="text_submitted" from="Control/Edit" to="." method="_on_edit_text_submitted"]
